Flip colors for Fill Tool missing #62359

Closed
opened 2019-03-08 14:43:21 +01:00 by Julien Kaspar · 5 comments
Member

Broken: cf09a2443cef

I'm not sure why this was never included but the fill tool doesn't have the shortcut X to flip the active color or the functionality to hold Ctrl and click to use the secondary color instead of the active one.

Making this possible for all tools that actually use colors makes sense to me.

Broken: cf09a2443cef I'm not sure why this was never included but the fill tool doesn't have the shortcut X to flip the active color or the functionality to hold Ctrl and click to use the secondary color instead of the active one. Making this possible for all tools that actually use colors makes sense to me.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Confirmed, checking

Confirmed, checking

This issue was referenced by blender/blender@4302342287

This issue was referenced by blender/blender@4302342287b56e6b47930eec7db55625c3589327
Philipp Oeser self-assigned this 2019-03-08 15:54:09 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#62359
No description provided.